@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "Cwd" => 0,
     "Data::Dumper" => 0,
     "File::Copy::Recursive" => 0,
-    "File::HomeDir" => 0,
+    "File::HomeDir::Tiny" => 0,
     "File::chdir" => 0,
     "Git::Wrapper" => "0.042",
     "IO::Prompt::Simple" => 0,
@@ -83,7 +83,7 @@ my %FallbackPrereqs = (
   "Cwd" => 0,
   "Data::Dumper" => 0,
   "File::Copy::Recursive" => 0,
-  "File::HomeDir" => 0,
+  "File::HomeDir::Tiny" => 0,
   "File::Spec" => 0,
   "File::Temp" => 0,
   "File::chdir" => 0,
